Fix: solve vh value incorrect on mobile browser

--- a/src/components/base.module.scss
+++ b/src/components/base.module.scss
@@ -8,6 +8,7 @@
   margin: 0;
   width: 100vw;
   height: 100vh;
+  height: calc(var(--vh, 1vh) * 100);
   background-position: center center;
   background-size: cover;
   background-repeat: no-repeat;
@@ -32,11 +33,14 @@
   left: 0;
   width: 100vw;
   height: 100vh;
+  height: calc(var(--vh, 1vh) * 100);
   overflow-y: auto;
 }
 
 .main {
   height: inherit;
+  min-height: 100vh;
+  min-height: calc(var(--vh, 1vh) * 100);
   width: inherit;
   display: flex;
   flex-direction: row;
